--- a/templates/service/settings.html
+++ b/templates/service/settings.html
@@ -1,10 +1,27 @@
 {% extends "service/base.html" %}
 
 {% block content %}
-    <h2>Welcome, {{ user.username }}</h2>
-
+    <h2>Welcome, {{ user.profile }}</h2>
+    {% if success %}
+        <h2>Successfully changed</h2>
+    {% endif %}
+    <a href="{% url home  %}">Home</a>
     <a href="{% url logout  %}">Logout</a>
-    <a href="{% url settings  %}">Settings</a>
+    <form method="POST" action=".">{% csrf_token %}
+        {{ change_password_form.as_ul }}
+        <input type="hidden" name="task" value="change_password" />
+        <input type="submit" value="Change Password" />
+    </form>
+
+    <form method="POST" action=".">{% csrf_token %}
+        {{ subscribe_form.as_ul }}
+        <input type="hidden" name="task" value="subscribe" />
+        <input type="submit" value="Subscribe" />
+    </form>
+
+
+
+
 
 
 {% endblock %}
