--- a/templates/service/home.html
+++ b/templates/service/home.html
@@ -1,9 +1,9 @@
 {% extends "service/base.html" %}
+{% block site_title %}Home{% endblock %}
+{% block page_title %}Welcome, {{ user.profile }}{% endblock %}
+{% block breadcrumbs %}
+    <div class="breadcrumbs">Home</div>
+{% endblock %}
 
 {% block content %}
-    <h2>Welcome, {{ user_profile }}</h2>
-    <a href="{% url logout  %}">Logout</a>
-    <a href="{% url settings  %}">Settings</a>
-
-
 {% endblock %}
